--- a/index.html
+++ b/index.html
@@ -80,20 +80,30 @@
 
         log('resolving core URLs (absolute) …');
         const coreBase = new URL('./vendor/ffmpeg/core/', document.baseURI).href;
-        ffmpeg.load({
-          coreURL: coreBase + 'ffmpeg-core.js',
-          wasmURL: coreBase + 'ffmpeg-core.wasm',
-          workerURL: coreBase + 'ffmpeg-core.worker.js'
-        }).then(function(){
-          log('ffmpeg loaded');
-          statusEl.textContent = 'loaded';
-          btnVersion.disabled = false;
-          btnExtract.disabled = false;
-          fileInput.disabled = false;
-        }).catch(function(err){
-          log('ffmpeg.load error: ' + err);
-          statusEl.textContent = 'load error';
-        });
+        (function(){
+          log('resolving core URL …');
+          const localCore = new URL('./vendor/ffmpeg/core/ffmpeg-core.js', document.baseURI).href;
+          const cdnCore1 = 'https://cdn.jsdelivr.net/npm/@ffmpeg/core@0.12.10/dist/ffmpeg-core.js';
+          const cdnCore2 = 'https://unpkg.com/@ffmpeg/core@0.12.10/dist/ffmpeg-core.js';
+          function tryLoad(coreURL){
+            log('ffmpeg.load with coreURL = ' + coreURL);
+            return ffmpeg.load({ coreURL: coreURL });
+          }
+          tryLoad(localCore)
+            .catch(function(err){ log('local core failed: ' + err); return tryLoad(cdnCore1); })
+            .catch(function(err){ log('cdn core #1 failed: ' + err); return tryLoad(cdnCore2); })
+            .then(function(){
+              log('ffmpeg loaded');
+              statusEl.textContent = 'loaded';
+              btnVersion.disabled = false;
+              btnExtract.disabled = false;
+              fileInput.disabled = false;
+            })
+            .catch(function(err){
+              log('ffmpeg.load error (all fallbacks failed): ' + err);
+              statusEl.textContent = 'load error';
+            });
+        })();
       } catch (e) {
         log('load click error: ' + e);
       }
